# libvmod-softpurge

./: .gitignore  .travis.yml  CHANGES.rst  Makefile.am  README.rst  autogen.sh  configure.ac  vmod-softpurge.spec
debian/: changelog  control  dirs  rules
redhat/: varnish-vmod-softpurge.spec  vmod-softpurge.spec
src/: Makefile.am  vmod_softpurge.c  vmod_softpurge.vcc
src/tests/: 01-load.vtc  02-run-simple.vtc  02-simple-hit.vtc  02-simple-miss.vtc  03-simple-miss.vtc  10-softpurge-hit.vtc  11-really-purged.vtc  12-softpurge-variants.vtc  13-softpurge-variants-sickbackend.vtc  14-mind-the-refcounters.vtc
